--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "core-js": "^3.8.3",
+    "postcss-pxtorem": "^6.0.0",
+    "vant": "^2.12.49",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
+    "vue-router": "3.6.4",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
