feat:完成搜索页

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
+    "lodash": "^4.17.21",
+    "ludash": "^0.1.0-pre",
     "postcss-pxtorem": "^6.0.0",
     "vant": "^2.12.49",
     "vue": "^2.6.14",
